--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,9 @@
+body {
+  font-family: sans-serif;
+  background-color: #c2afe7;
+}
+
 h1 {
   color: #afdae7;
 }
-body{
-  background-color: #c2afe7;
-}
+ 
