--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,9 @@
 body {
   font-family: sans-serif;
   background-color: #c2afe7;
+  text-align: center;
 }
 
 h1 {
-  color: #afdae7;
+  color: #876eb8;
 }
- 
