--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,16 @@
-.header-site {
-   background-color: #000000;
-   background-image: url(https://upload.wikimedia.org/wikipedia/commons/0/0e/Terragen_render.jpg);
-   background-position: 100% 100%;
-   background-repeat: no-repeat;
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+    font-family: sans-serif;
 }
+
+.description {
+  color: black;
+}
+
 body {
-  font-family: sans-serif;
   background-color: #c2afe7;
   text-align: center;
 }
@@ -13,6 +18,10 @@ body {
 h1 {
   color: #876eb8;
 }
+
 a:link {
   text-decoration: none;
 }
+
+
+/* this is a comment*/
