--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,13 @@ body {
 h1 {
   color: #876eb8;
 }
+h3 {
+  color: #876eb8;
+}
+
+h2 {
+  color: #876eb8;
+}
 
 a:link {
   text-decoration: none;
