--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,7 @@
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
-
-.description {
-  color: black;
-}
-
 body {
+  margin:0;
+  padding: 0;
+  font-family: sans-serif, arial;
   background-color: #c2afe7;
   text-align: center;
 }
@@ -26,7 +17,7 @@ h2 {
   color: #876eb8;
 }
 
-a:link {
+a > link {
   text-decoration: none;
 }
 
