--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,14 @@
+* {
+   outline: 1px solid red !important;
+}
+
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 body {
   margin:0;
   padding: 0;
@@ -9,9 +20,9 @@ body {
 h1 {
   color: #876eb8;
 }
-h3 {
+/*h3 {
   color: #876eb8;
-}
+}*/
 
 h2 {
   color: #876eb8;
