--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,16 @@
     box-sizing: border-box;
 }
 
+.banner {
+  width: 100%;
+  display: block;
+}
+
+.banner-image {
+  width: 100%;
+  display: block;
+}
+
 body {
   margin:0;
   padding: 0;
