--- a/styles/main.css
+++ b/styles/main.css
@@ -9,16 +9,17 @@
     box-sizing: border-box;
 }
 
+
 .banner {
   width: 100%;
   display: block;
+  background-image: url(https://www.goodfreephotos.com/albums/united-states/wisconsin/southern-wisconsin/wisconsin-hyde-landscape-of-the-creek.jpg);
 }
 
 .banner-image {
   width: 100%;
   display: block;
 }
-
 body {
   margin:0;
   padding: 0;
