--- a/styles/main.css
+++ b/styles/main.css
@@ -35,22 +35,22 @@ body {
   margin:0;
   padding: 0;
   font-family: sans-serif, arial;
-  background-color: #c2afe7;
+  background-color: #54a3ba;
   text-align: center;
 }
 
 h1 {
-  color: #876eb8;
+  color: #ffffff;
 }
 /*h3 {
   color: #876eb8;
 }*/
 
 h2 {
-  color: #876eb8;
+  color: #ffffff;
 }
 
-a > link {
+a>link {
   text-decoration: none;
 }
 
