--- a/styles/main.css
+++ b/styles/main.css
@@ -26,7 +26,7 @@
   display: block;
   background-image: url(https://www.goodfreephotos.com/albums/united-states/wisconsin/southern-wisconsin/wisconsin-hyde-landscape-of-the-creek.jpg);
   margin-top: 0;
-  margin-bottom: 0;
+  border-top: 0;
   padding-top: 0;
 
 }
