--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,7 @@
 
 .post1 {
   max-width: 460px;
+  margin-right: 500px
 }
 
 .post2 {
@@ -25,9 +26,9 @@
   width: 100%;
   display: block;
   background-image: url(https://www.goodfreephotos.com/albums/united-states/wisconsin/southern-wisconsin/wisconsin-hyde-landscape-of-the-creek.jpg);
-  margin-top: 0;
-  border-top: 0;
-  padding-top: 0;
+  margin-top: 0px;
+  border-top: 0px;
+  padding-top: 0px;
 
 }
 
@@ -42,6 +43,7 @@ body {
 h1 {
   color: #ffffff;
 }
+
 /*h3 {
   color: #876eb8;
 }*/
@@ -50,7 +52,7 @@ h2 {
   color: #ffffff;
 }
 
-a>link {
+a {
   text-decoration: none;
 }
 
