--- a/styles/main.css
+++ b/styles/main.css
@@ -14,12 +14,15 @@
 }
 
 .post1 {
-  max-width: 460px;
-  margin-right: 500px
+  margin-right: 0%;
+  width: 29%;
+  margin-left: 15%;
 }
 
 .post2 {
-  max-width: 705px;
+  margin-left: 15%;
+  width: 29%;
+  margin-right: 15%;
 }
 
 .banner {
@@ -27,8 +30,9 @@
   display: block;
   background-image: url(https://www.goodfreephotos.com/albums/united-states/wisconsin/southern-wisconsin/wisconsin-hyde-landscape-of-the-creek.jpg);
   margin-top: 0px;
-  border-top: 0px;
-  padding-top: 0px;
+  margin-bottom: 10px;
+  padding-top: 25px;
+  padding-bottom: 30px;
 
 }
 
