--- a/styles/main.css
+++ b/styles/main.css
@@ -33,7 +33,7 @@ a {
   text-decoration: none;
 }
 
-.banner {
+header.banner {
   width: 100%;
   display: block;
   background-image: url(https://www.goodfreephotos.com/albums/united-states/wisconsin/southern-wisconsin/wisconsin-hyde-landscape-of-the-creek.jpg);
@@ -43,17 +43,17 @@ a {
   padding-bottom: 30px;
 }
 
-.blog {
+div.blog {
   display: flex;
 }
 
-.post1 {
+h2.post1 {
   margin-right: 0%;
   width: 29%;
   margin-left: 15%;
 }
 
-.post2 {
+h2.post2 {
   margin-left: 15%;
   width: 29%;
   margin-right: 15%;
