--- a/styles/main.css
+++ b/styles/main.css
@@ -17,17 +17,13 @@ body {
   text-align: center;
 }
 
-h1 {
+h1,h2 {
   color: #ffffff;
 }
 
 /*h3 {
   color: #876eb8;
 }*/
-
-h2 {
-  color: #ffffff;
-}
 
 a {
   text-decoration: none;
