--- a/styles/main.css
+++ b/styles/main.css
@@ -25,7 +25,7 @@ a {
   text-decoration: none;
 }
 
-header .banner {
+header.banner {
   width: 100%;
   display: block;
   background-image: url(https://www.goodfreephotos.com/albums/united-states/wisconsin/southern-wisconsin/wisconsin-hyde-landscape-of-the-creek.jpg);
@@ -36,11 +36,11 @@ header .banner {
   text-align: center;
 }
 
-header .title {
+header.title {
   color: #ffffff;
 }
 
-div .blog {
+div.blog {
   display: flex;
   text-align:center;
   max-width: 100%;
@@ -50,26 +50,35 @@ h2 {
   color: #ffffff;
 }
 
-h2 .post.1 {
+h2.post.1 {
   margin-left: 1%;
   margin-right: 1%;
   padding-left: 1%;
   padding-right: 1%;
 }
 
-h2 .post.2 {
+h2.post.2 {
   margin-left: 1%;
   margin-right: 1%;
   padding-left: 1%;
   padding-right: 1%;
 }
 
-h2 .post.3 {
+h2.post.3 {
   margin-left: 1%;
   margin-right: 1%;
   padding-left: 1%;
   padding-right: 1%;
 }
+
+
+h2.post.4 {
+  margin-left: 1%;
+  margin-right: 1%;
+  padding-left: 1%;
+  padding-right: 1%;
+}
+
 
 
 /* this is a comment*/
