--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,6 @@
 
 header {
   text-align: center;
-  color: #7c8587;
   background-color: #c5d3d6;
   margin: 0;
   padding-bottom: 1%
@@ -30,6 +29,7 @@ header {
  }
 
  h1 {
+   color: #7c8587;
    margin: 0.5%;
    padding: 1%
  }
@@ -46,8 +46,8 @@ display: inline-flex;
 }
 
  .nav {
-   background-color: black;
-   color: white;
+   background-color: #c5d3d6;
+   color: #7c8587;
    list-style: none;
    text-align: center;
    padding: 20px 0 20px 0;
