--- a/styles/main.css
+++ b/styles/main.css
@@ -45,6 +45,7 @@ h1,h2,h3,h4,h5,h6 {
 a {
   text-align: center;
   color: #7c8587;
+  text-decoration: none;
 }
 
 .row {
@@ -96,6 +97,7 @@ a {
 .main > a:hover {
   color: #a8b4b7;
 }
+
 .one.column,
 .one.columns                    { width: 4.66666666667%; }
 .two.columns                    { width: 13.3333333333%; }
